--- a/anaconda.spec.in
+++ b/anaconda.spec.in
@@ -223,6 +223,89 @@ update-desktop-database &> /dev/null || :
 %endif
 
 %changelog
+* Fri Aug 27 2010 Chris Lumens <clumens@redhat.com> - 15.0-1
+- systemd symlinks now reside in /lib (#627401). (clumens)
+- filtering UI: don't be picky about udev wwid length. (akozumpl)
+- mpath: put quotes around the wwids, they can have spaces. (akozumpl)
+- Use blacklist_exceptions for mpath devices (#612399) (mfuruta)
+- typo: repeated line in lvm.py (akozumpl)
+- mpath: do not deactivate mpath device upon its teardown. (akozumpl)
+- mpath: teardown format from MultipathDevice.teardown() (#616273). (akozumpl)
+- And change the tigervnc requires in the spec file too. (clumens)
+- Kill joe. (pjones)
+- Require tigervnc-server-minimal to remove perl from livecd (#627280).
+  (clumens)
+- Use ID_SERIAL_RAW for multipath, if available (#626842). (clumens)
+- mpath: filter member partitions wiser in lvm. (dcantrell)
+- mpath: do not deactivate mpath partitions in teardown(). (akozumpl)
+- Fix comparison between /dev/disk/* paths and udev symlinks (#621515).
+  (clumens)
+- Remove telnetd.h from POTFILES.in so make works again. (clumens)
+- Reset labels on /var/cache/yum as well (#623434). (clumens)
+- NetworkManager uses a different config file now (#623937). (clumens)
+- Don't touch resolv.conf which is handled by NM (#622927) (rvykydal)
+- logging: turn the loglevels into proper enum. (akozumpl)
+- loader: parseCmdLineIp* takes just the value as an argument now. (akozumpl)
+- logging: refactor printLogHeader (akozumpl)
+- Remove the nousbstorage command line option (#624556). (clumens)
+- Remove telnet support. (dlehman)
+- Allow omission of --size for partitions, use default size. (dlehman)
+- Fix the provides we look for when installing DUD (#618862) (msivak)
+- Fix the paths for DD in postinstall phase Related: rhbz#619745 (msivak)
+- Remove the final use of $LOADERBIN from scripts. (clumens)
+- Only set noverifyssl on URL installs (#621469). (clumens)
+- Base install/upgrade default on whether any candidates were found (#590505).
+  (clumens)
+- fix 899f401611da021b3ec3882577ad860eae47f265 (akozumpl)
+- Do not use autoconfiguration for DHCPv6 (#623216) (rvykydal)
+- Add scripts/githooks/ with commit-msg script. (dcantrell)
+- I don't need to pass "nomodeset" to stage2 after all. (clumens)
+- After cancelled stage 2 network enablement remove temporary repo (#623639)
+  (rvykydal)
+- Fix traceback when using duplicate name for added/edited repo (#623080)
+  (rvykydal)
+- Fix traceback after Cancel in stage 2 network enablement dialog (#623017)
+  (rvykydal)
+- Make sure "nomodeset" and "xdriver=" get passed on to stage2 (#623129).
+  (clumens)
+- We checked for updated driver with wrong path prefix (#619745) (msivak)
+- Proper detection of successful module update (#618862) (msivak)
+- LVM and LUKS now align everything to 1MB boundaries. (#623458) (dlehman)
+- Clearing of formatting from unpartitioned disks belongs in clearPartitions.
+  (dlehman)
+- Do disklabel handling for whole disk formats unknown to anaconda (#619721)
+  (hdegoede)
+- Do not support "part --grow raid.XX" (#577432). (clumens)
+- Update systemd's default.target for the desired runlevel (#623102, mschmidt).
+  (clumens)
+- Skip cleardiskssel on custom partitioning (#620647). (clumens)
+- logging: typo in analog (akozumpl)
+- logging: fix logic in getSyslog(). (akozumpl)
+- Use full EFI path to map drives for grub (#598572) (bcl)
+- Don't complain about upgrading the same release (#620953) (bcl)
+- Don't crash on unnamed installs (#621685) (bcl)
+- mpath: add MultipathDevices first, before their partitions. (akozumpl)
+- ibft: always configure network devices if there's ibft available (#617860).
+  (akozumpl)
+- Log exclusiveDisks, ignoredDisks, and reasons for ignoring devices. (dlehman)
+- Include mpath/fwraid member devices in exclusiveDisks. (dlehman)
+- Use part instead of device in PartitionWindow.populate() (#575749)
+  (dcantrell)
+- Add support for ipv6 to text UI network enablement (#612476) (rvykydal)
+- Remember user's choice when going back in Configure TCP/IP (#609570)
+  (rvykydal)
+- Update generating of anaconda-ks.cfg for ipv6. (rvykydal)
+- Update ks network command for ipv6 in anaconda. (rvykydal)
+- Fix typo and set mpaths' sysfs path before querying udevdb. (#620712)
+  (dlehman)
+- The --loaderbin parameter to makeinitrd is unused.  Kill it. (clumens)
+- services is a set, not a list (#620900, akozumpl). (clumens)
+- Set AUTO_VLAN=yes in fcoe config files (#618875) (dcantrell)
+- The --initrdsize parameter to makeinitrd is unused.  Kill it. (clumens)
+- Honor bootdrive selection when autopartitioning (#620442) (hdegoede)
+- shutdown: Use lstat to test for /lib64 (hdegoede)
+- shutdown: don't unmount /sys and /proc (hdegoede)
+
 * Mon Aug 02 2010 Chris Lumens <clumens@redhat.com> - 14.14-1
 - Write out correct nfs url for repo= in /root/anaconda-ks.cfg (#584580)
   (rvykydal)
