iscsi: discovery and node login wizard.
For GUI this should allow the user to use different credentials for
discovery and login. Also, the discovery and login dialogs won't display
the complex authentication options by default, so they look less scary and
make it clear that CHAP is not always required.

Related: rhbz#469382
Related: rhbz#607827

--- a/po/POTFILES.in
+++ b/po/POTFILES.in
@@ -159,7 +159,7 @@ data/ui/create-storage.glade.h
 data/ui/detailed-dialog.glade.h
 data/ui/fcoe-config.glade.h
 data/ui/filter.glade.h
-data/ui/iscsi-config.glade.h
+data/ui/iscsi-dialogs.glade.h
 data/ui/lukspassphrase.glade.h
 data/ui/netconfig.glade.h
 data/ui/network.glade.h
