Add test cases for the new Size class.

--- a/tests/storage_test/Makefile.am
+++ b/tests/storage_test/Makefile.am
@@ -19,5 +19,11 @@
 
 SUBDIRS = devicelibs_test
 
+EXTRA_DIST = *.py
 
 MAINTAINERCLEANFILES = Makefile.in
+
+ANACDIR = $(top_builddir)/pyanaconda
+TESTS_ENVIRONMENT = PATH=/sbin:/usr/sbin:$$PATH PYTHONPATH=$(top_builddir)/tests:$(ANACDIR)/isys/.libs:$(ANACDIR):$(top_builddir)
+
+TESTS = size_test.py
