--- a/anaconda.spec.in
+++ b/anaconda.spec.in
@@ -223,6 +223,9 @@ update-desktop-database &> /dev/null || :
 %endif
 
 %changelog
+* Mon Oct 18 2010 Brian C. Lane <bcl@redhat.com> - 14.21-1
+- Take into account hidden disks (#583906) (bcl)
+
 * Thu Oct 14 2010 David Lehman <dlehman@redhat.com> - 14.20-1
 - Make sure we have the container before the member arrays. (#642765) (dlehman)
 - use different approach to tweak gconf settings in the image (#642358).
