Remove isys cpio extraction code.
The only place this code is still used is in loader.  Loader is now
using libarchive to unpack cpio streams and zlib to uncompress them, so
we do not need these functions anymore.

--- a/pyanaconda/isys/Makefile.am
+++ b/pyanaconda/isys/Makefile.am
@@ -19,7 +19,7 @@
 
 pkgpyexecdir = $(pyexecdir)/py$(PACKAGE_NAME)
 
-ISYS_SRCS = devices.c imount.c cpio.c uncpio.c lang.c \
+ISYS_SRCS = devices.c imount.c lang.c \
             isofs.c linkdetect.c vio.c ethtool.c eddsupport.c iface.c \
             auditd.c log.c mem.c
 
