We now need to BuildRequire dbus-python.
That's because of this silliness:

PYTHONPATH="../pyanaconda" /usr/bin/python ../scripts/getlangnames.py > lang-names
Traceback (most recent call last):
  File "../scripts/getlangnames.py", line 22, in <module>
    import language as language
  File "/builddir/build/BUILD/anaconda-15.5/pyanaconda/language.py", line 29, in <module>
    import system_config_keyboard.keyboard as keyboard
  File "/usr/lib/python2.7/site-packages/system_config_keyboard/keyboard.py", line 27, in <module>
    import dbus
ImportError: No module named dbus

Someone please get us out of the keymap generation game.

--- a/anaconda.spec.in
+++ b/anaconda.spec.in
@@ -81,7 +81,7 @@ BuildRequires: yum >= %{yumver}
 BuildRequires: zlib-devel
 BuildRequires: NetworkManager-devel >= %{nmver}
 BuildRequires: NetworkManager-glib-devel >= %{nmver}
-BuildRequires: dbus-devel >= %{dbusver}
+BuildRequires: dbus-devel >= %{dbusver}, dbus-python
 BuildRequires: system-config-keyboard >= %{sckeyboardver}
 %ifarch %livearches
 BuildRequires: desktop-file-utils
