Add libarchive helper functions for loader in unpack.c
Created some helper functions for loader's interaction with
libarchive.  There are 3 functions currently:

1) A function to initialize a new archive object
2) A function to extract all archive members to a specific
   destination (if NULL, extract to current directory)
3) A function wrapping #1 and #2 to extract a compressed
   archive file

--- a/loader/Makefile.am
+++ b/loader/Makefile.am
@@ -53,7 +53,8 @@ loader_SOURCES     = loader.c copy.c moduleinfo.c loadermisc.c \
                      selinux.c mediacheck.c kickstart.c driverselect.c \
                      getparts.c dirbrowser.c fwloader.c ibft.c hardware.c \
                      method.c cdinstall.c hdinstall.c nfsinstall.c \
-                     urlinstall.c net.c urls.c rpmextract.c readvars.c
+                     urlinstall.c net.c urls.c rpmextract.c readvars.c \
+                     unpack.c
 
 init_CFLAGS        = $(COMMON_CFLAGS) $(GLIB_CFLAGS)
 init_LDADD         = $(GLIB_LIBS) $(top_srcdir)/pyanaconda/isys/libisys.la
