Remove the parts required to make "make tests" work.
Since we're apparently using "make unittest" instead, make sure the other
target simply doesn't work so there's no confusion.  Also, add a Makefile.am
to tests/pylint so that directory is included in the distributed sources.

--- a/configure.ac
+++ b/configure.ac
@@ -290,6 +290,7 @@ AC_CONFIG_FILES([Makefile
                  tests/kickstart_test/Makefile
                  tests/storage_test/Makefile
                  tests/storage_test/devicelibs_test/Makefile
+                 tests/pylint/Makefile
                  tests/regex/Makefile
                  pyanaconda/textw/Makefile
                  data/ui/Makefile
